feat(baclight): works on DK setup, display driver works as well, slint rendering still not

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,12 @@
         "defmt",
         "forceoff",
         "gpio",
+        "miso",
+        "mosi",
+        "pixelcolor",
+        "prescaler",
         "rustc",
-        "slint"
+        "slint",
+        "spim"
     ]
 }
