--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ embassy-futures = { version = "0.1.0" , git = "https://github.com/embassy-rs/emb
 embassy-sync = { version = "0.6.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"] }
 embassy-executor = { version = "0.6.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["task-arena-size-131072", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
 embassy-time = { version = "0.3.2" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "defmt-timestamp-uptime"] }
-embassy-nrf = { version = "0.2.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac", "nfc-pins-as-gpio"] }
+embassy-nrf = { version = "0.2.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "time", "gpiote", "unstable-pac", "nfc-pins-as-gpio"] }
 embassy-net = { version = "0.4.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
 embassy-usb = { version = "0.3.0" , git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["defmt"] }
 embedded-io-async = { version = "0.6.1" }
