--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,8 @@ embedded-storage = "0.3.1"
 usbd-hid = "0.8.1"
 serde = { version = "1.0.136", default-features = false }
 
-slint = { version = "1.8.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
+# slint = { version = "1.8.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
+slint = { version = "1.9.0", git ="https://github.com/slint-ui/slint.git", branch = "master", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
 embedded-alloc = "0.6.0"
 embedded-graphics = "0.8.1"
 gc9a01-rs = "0.4.2"
@@ -45,4 +46,5 @@ embedded-hal-bus = "0.2.0"
 debug = 2
 
 [build-dependencies]
-slint-build = "1.8.0"
+# slint-build = "1.8.0"
+slint-build = { version = "1.9.0", git ="https://github.com/slint-ui/slint.git", branch = "master" }
